syntax = "proto3";

package user;

option go_package = "./pkg/user/pb";

service AdminAuthService {
  rpc AdminSignUp(SingUpRequest) returns (SignUpResponse) {};
  rpc AdminLogin(LoginInRequest) returns (LoginResponse) {};
}

// Register
message SingUpRequest {
  string name = 1;
  string email = 2;
  string password = 4;
  string confirmpassword = 5;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
}

message LoginInRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string status = 2;
  string error = 3;
}
